[package]
name = "tradiff-lib"
version = "1.0.0"
edition = "2021"

[build-dependencies] # <-- We added this and everything after!
lalrpop = "0.20.2"

[dependencies]
lalrpop-util = { version = "0.20.2", features = ["lexer", "unicode"] }
logos = "0.14.1"

[dev-dependencies]
pretty_assertions = "1.4.0"
